<?xml version="1.0"?>
<package>
  <license>BSD</license>
  <version>1.0.1</version>
  <name>CAN_com</name>
  <description>IPC_Node for FSAC ACAN for ROS.</description>
  <author email="scottie9578@sina.com">ScottieHan</author>
  <maintainer email="scottie9578@sina.com">ScottieHan</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>  
  <build_depend>rospy</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <export></export>

</package>
